--- a/README.adoc
+++ b/README.adoc
@@ -15,8 +15,8 @@ even if you say .\SetPaths.ps1
 
 == TO USE
 
-* curl -o Setup1.bat  https://github.com/IanDarwin/510G-CourseLoad/Setup1.bat
-* curl -o SetPaths.ps1  https://github.com/IanDarwin/510G-CourseLoad/SetPaths.ps1
+* curl -O https://github.com/IanDarwin/510G-CourseLoad/Setup1.bat
+* curl -O https://github.com/IanDarwin/510G-CourseLoad/SetPaths.ps1
 * Run it: Setup1
 
 == Structure
