--- a/README.adoc
+++ b/README.adoc
@@ -15,9 +15,8 @@ even if you say .\SetPaths.ps1
 
 == TO USE
 
-* curl -O https://github.com/IanDarwin/510G-CourseLoad/Setup1.bat
-* curl -O https://github.com/IanDarwin/510G-CourseLoad/SetPaths.ps1
-* Run it: Setup1
+* curl -O https://github.com/IanDarwin/510G-CourseLoad/setup.ps1
+* Run it: powershell .\setup.ps1
 
 == Structure
 
