--- a/README.adoc
+++ b/README.adoc
@@ -2,22 +2,27 @@
 
 This directory tries to automate the setup as much as possible.
 
-== BEFORE USE
+== TO CONFIGURE A STUDENT MACHINE
 
-It runs one PowerShell script, so you MUST first run PowerShell as Administrator,
-and give the input
+* In a CMD window, download the script
+
+	cd %USERPROFILE%
+	curl -O https://raw.githubusercontent.com/IanDarwin/510G-CourseLoad/main/setup.ps1
+
+* If the student logs in with a name other than 'student', edit the new file setup.ps1 and change globally, case-insensitively
+
+* In a PowerShell AS ADMIN window, allow running unsigned P/S scripts:
 
 	set-executionpolicy Unrestricted
 
 AND accept the resulting prompt with a Yes.
-If you don't do this, PowerShell will say it can't find SetPaths.ps1 as a script,
-even if you say .\SetPaths.ps1
 
-== TO USE
+* In the same window, run the setup
 
-* curl -O https://raw.githubusercontent.com/IanDarwin/510G-CourseLoad/main/setup.ps1
-* (or download in a browser, save as, rename to get rid of hidden .txt extension)
-* Run it: powershell .\setup.ps1
+	cd ~
+	.\setup.ps1
+
+* Come back when it's done, and complete the "manual steps" shown below.
 
 == Structure
 
@@ -27,6 +32,7 @@ to each student's directory:
 * CourseFiles510G - exercises, solutions, samples
 * Downloads/... - downloads for installing programs for later chapters
 	so the students can learn to set these up
+* Pictures/ - one image file used in a do-now
 * bin - a few shell scripts/batch files
 * lib - a few Java Jar files etc.
 * javasrc - extra Java samples that we might refer to in response to questions
@@ -36,18 +42,27 @@ to each student's directory:
 
 We presume that:
 
+* The students log in as "student" on these machines
 * The student machines have Windows 10/11
 * The student machines have "winget" installed (it was optional on some early Win10).
 * The student machines have the git-bash (MinGW) package installed and on PATH
 * The student machines have recent Python 3 installed standardly (so that "pip install" will work).
 
-The Setup1 file is a batch script using:
+The setup.ps1 file is a PowerShell script using:
 
 * WinGet to install java, intellij idea, android studio, etc
 * git to install CourseFiles510G, javasrc, Android-Cookbook-Examples
 * curl to download a few files
 * tar to extract bin, lib, Downloads, Maven
 * powershell SetPaths.ps1 to set the PATH for some programs that need it
+
+== Manual Steps
+
+The following did not get automated. Please:
+
+* Set the home directory in whatever browser the students are using, to 
+
+	file://Users/Student/CourseFiles510G/web/index.html
 
 == Summary
 
