--- a/README.adoc
+++ b/README.adoc
@@ -8,11 +8,14 @@ This directory tries to automate the setup as much as possible.
 
 	Start-BitsTransfer -Destination SetPaths.ps1 -Source https://raw.githubusercontent.com/IanDarwin/510G-CourseLoad/main/SetPaths.ps1
 
+* If the student logs in with a name other than 'student', edit the new file _Setup1.bat_ 
+and change globally, case-insensitively from _student_ to their name.
+
 * In the same window, allow running unsigned P/S scripts:
 
 	set-executionpolicy Unrestricted
 
-	AND accept the resulting prompt in the affirmative!
+	You must accept the resulting prompt in the affirmative!
 
 * In the same window, run the script to set paths
 
@@ -25,7 +28,8 @@ This directory tries to automate the setup as much as possible.
 	cd %USERPROFILE%
 	curl -O https://raw.githubusercontent.com/IanDarwin/510G-CourseLoad/main/Setup1.bat 
 
-* If the student logs in with a name other than 'student', edit the new file setup.ps1 and change globally, case-insensitively
+* If the student logs in with a name other than 'student', edit the new file _Setup1.bat_ 
+and change globally, case-insensitively from _student_ to their name.
 
 * Unless you are sure that Git Bash (MinGW) is installed:
 
